--- a/WebContent/template/admin.xhtml
+++ b/WebContent/template/admin.xhtml
@@ -6,27 +6,45 @@
 
 
     <ui:define name="content">
-    	<div class="column_6 offset_3 panel">
+    	<div class="column_2 offset_1 side_nav">
+    		<h:form>
+    			<h6>Menu</h6>
+    			<hr/>
+    			<ul>
+    				<li>
+    					<h:commandLink action="/admin/departments/index" 
+    								   	actionListener="#{departmentBean.loadEntities}" 
+    								 	value="Departamentos"
+    								 	styleClass="theme color"/>
+    				</li>
+    				<li>
+    					<h:commandLink action="/admin/manufacturers/index" 
+    								   	actionListener="#{manufacturerBean.loadEntities}" 
+    								 	value="Fabricantes"
+    								 	styleClass="theme color"/>
+					</li>
+					<li>
+    					<h:commandLink action="/admin/employees/index" 
+    								   	actionListener="#{employeeBean.loadEntities}" 
+    								 	value="Funcionários"
+    								 	styleClass="theme color"/>
+					</li>
+					<li>
+    					<h:commandLink action="/admin/products/index" 
+    								   	actionListener="#{productBean.loadEntities}" 
+    								 	value="Produtos"
+    								 	styleClass="theme color"/>
+					</li>
+    			</ul>
+    		</h:form>
+    	</div>
+    	<div class="column_6 panel">
     		<h5>Admin » <ui:insert name="admin_page_title" /></h5>
     		<h:messages globalOnly="true"  errorClass="margin-top error margin-bottom" infoClass="info margin-top margin-bottom" />
     		<ui:insert name="admin_content" />
     	</div>
     	
-    	<div class="column_2 side_nav">
-    		<h6>Menu</h6>
-    		<hr/>
-    		<ul>
-    			<li>
-    				<h:form>
-    					<h:commandLink action="/admin/departments/index" 
-    								   	actionListener="#{departmentBean.loadEntities}" 
-    								 	value="Departamentos"
-    								 	styleClass="theme color"/>
-    				</h:form>
-<!--     			<h:link outcome="/admin/departments/index"  styleClass="theme color">Departamentos</h:link></li> -->
-				</li>
-    		</ul>
-    	</div>
+    	
     	
     	
     </ui:define>
