--- a/WebContent/template/app.xhtml
+++ b/WebContent/template/app.xhtml
@@ -37,6 +37,7 @@
 		<!-- <h:outputScript name="js/tuktuk.js"  /> -->
 		<h:outputScript name="js/vendor/jquery.js"  />
 		<h:outputScript name="js/vendor/masked_input.js"  />
+		<h:outputScript name="js/vendor/jquery.maskMoney.min.js"  />
 		<h:outputScript name="js/app.js"  />
 	</h:body>
 </html>
