--- a/WebContent/template/admin.xhtml
+++ b/WebContent/template/admin.xhtml
@@ -44,8 +44,6 @@
     		<ui:insert name="admin_content" />
     	</div>
     	
-    	
-    	
-    	
+    	<ui:insert name="filters" />
     </ui:define>
  </ui:decorate>
