--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -77,7 +77,7 @@ body form textarea:focus {
 
 .search-bar .icon {
 	position: absolute;
-	top: 30px;
+	bottom: 85px;
 	right: 30px;
 }
 
@@ -106,10 +106,16 @@ body form textarea:focus {
 
 .product figure {
 	text-align: center;
+	width: 320px;
+	height: 250px;
+	vertical-align: middle;
+	overflow: hidden;
+	display: table-cell;
 }
 
 .product img {
-	max-width: 80%;
+	max-width: 100%;
+	max-height: 250px;
 }
 
 .product p {
