Improved shopping cart. #13

--- a/WebContent/template/app.xhtml
+++ b/WebContent/template/app.xhtml
@@ -23,7 +23,7 @@
 					</h1>
 				</div>
 				<nav class="column_8 text right" data-tuktuk="menu">
-					<a href="" class="button tiny icon shopping-cart"> Carrinho</a>
+					<h:link styleClass="button tiny icon shopping-cart" outcome="/checkout.xhtml"> Carrinho</h:link>
 					<h:link styleClass="button secondary tiny icon signin" outcome="/login"> Login</h:link>
 					<h:link styleClass="button secondary tiny icon pencil" outcome="/admin/index"> Admin</h:link>	
  				</nav>
