--- a/WebContent/template/app.xhtml
+++ b/WebContent/template/app.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="pt-BR" xmlns:h="http://java.sun.com/jsf/html" 
+<html lang="pt-BR" xmlns:h="http://java.sun.com/jsf/html"
 				  xmlns:f="http://java.sun.com/jsf/core"
 				  xmlns:ui="http://java.sun.com/jsf/facelets">
 	<h:head>
@@ -9,7 +9,7 @@
 	  	<h:outputStylesheet name="css/tuktuk.icons.css" />
 	  	<h:outputStylesheet name="css/tuktuk.theme.css" />
 	  	<h:outputStylesheet name="css/main.css" />
-	  	
+
 	  	<link href="#{resource['images/favicon.ico']}" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 	  	<link href="#{resource['images/favicon.png']}" rel="shortcut icon" type="image/x-icon" />
 	  	<link href="#{resource['images/favicon.png']}" rel="shortcut icon" type="image/png" />
@@ -25,18 +25,18 @@
 				<nav class="column_8 text right" data-tuktuk="menu">
 					<h:link styleClass="button tiny icon shopping-cart" outcome="/checkout.xhtml"> Carrinho</h:link>
 					<h:link styleClass="button secondary tiny icon signin" outcome="/login"> Login</h:link>
-          <h:form>
+          <h:form style="display: inline;">
             <h:commandLink styleClass="button secondary tiny icon signout" value="Logout" action="#{logoutBean.logout()}"/>
           </h:form>
-					<h:link styleClass="button secondary tiny icon pencil" outcome="/admin/index"> Admin</h:link>	
+					<h:link styleClass="button secondary tiny icon pencil" outcome="/admin/index"> Admin</h:link>
  				</nav>
 			</div>
 		</header>
-		
+
 		<div class="row padding-top">
 			<ui:insert name="content"></ui:insert>
 		</div>
-		
+
 		<!-- <h:outputScript name="js/tuktuk.js"  /> -->
 		<h:outputScript name="js/vendor/jquery.js"  />
 		<h:outputScript name="js/vendor/masked_input.js"  />
