--- a/WebContent/template/app.xhtml
+++ b/WebContent/template/app.xhtml
@@ -24,9 +24,9 @@
 				</div>
 				<nav class="column_8 text right" data-tuktuk="menu">
 					<h:link styleClass="button tiny icon shopping-cart" outcome="/checkout.xhtml"> Carrinho</h:link>
-					<h:link styleClass="button secondary tiny icon signin" outcome="/login"> Login</h:link>
+          <h:link styleClass="button secondary tiny icon signin" outcome="/login" rendered="#{!logoutBean.isLoggedIn()}"> Login</h:link>
           <h:form style="display: inline;">
-            <h:commandLink styleClass="button secondary tiny icon signout" value="Logout" action="#{logoutBean.logout()}"/>
+            <h:commandLink styleClass="button secondary tiny icon signout" value="Logout" action="#{logoutBean.logout()}" rendered="#{logoutBean.isLoggedIn()}"/>
           </h:form>
 					<h:link styleClass="button secondary tiny icon pencil" outcome="/admin/index"> Admin</h:link>
  				</nav>
